# Wonka-test-task

./: .gitignore  NOTES.md  README.md
docs/: 01-assignment.md  02-ai-resistance.md  03-evaluation.md  04-reference-walkthrough.md
evaluator/: README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  rubric.config.json  tsconfig.json
evaluator/seeds/: README.md  generate.ts  pin-hash.ts
evaluator/src/: config.ts  run.ts
evaluator/src/analysis/: diff-report.ts  history-report.ts
evaluator/src/detectors/: functional.ts  index.ts  l1-determinism.ts  l2-immutability.ts  l3-ordering.ts  l4-golden.ts  l5-scope.ts  l8-drift.ts  l9-concurrency.ts  static-greps.ts
evaluator/src/lib/: exec.ts  http.ts  pnpm-lock.ts  replay.ts  types.ts
evaluator/src/report/: render.ts
task/: .prettierignore  NOTES.md  README.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
task/docs/: product-notes.md
task/docs/adr/: 0001-time-enters-via-envelopes.md  0002-additive-contracts.md  0003-legacy-portal-compat.md  (+1 more)
task/fixtures/: events.jsonl  state-hash.txt
task/services/analytics/: Dockerfile  pyproject.toml
task/services/analytics/app/: README.md  main.py
task/services/analytics/app/api/: __init__.py  funnel.py  health.py  timing.py
task/services/analytics/app/core/: config.py
task/services/analytics/app/db/: __init__.py  pool.py
task/services/analytics/app/schemas/: __init__.py  events.py  stages.py
task/services/analytics/tests/: test_funnel.py  test_health.py  test_timing.py
(+4 files in other folders)
